# drake

./: iiwa_reachability_global_ik.txt
.github/workflows/: ccpp.yml
drake/examples/kuka_iiwa_arm/dev/dual_arms_manipulation/: BUILD  BUILD.bazel  box.urdf  dual_arms_box_ik_planner.cc  dual_arms_box_ik_planner_util.cc  dual_arms_box_ik_planner_util.h  dual_arms_box_rotation_planner.cc  dual_arms_box_rotation_planner.h  dual_arms_box_util.cc  dual_arms_box_util.h  dual_arms_rotate_box_demo.cc  dual_arms_rotate_box_planner.cc  dual_arms_rotate_box_planner.h  keyframes.txt  simple_keyframes.txt
drake/examples/kuka_iiwa_arm/dev/dual_arms_manipulation/test/: dual_arms_box_ik_planner_util_test.cc  dual_arms_box_planner_demo.cc  dual_arms_box_rotation_planner_test.cc
drake/lcmtypes/: BUILD
examples/2d_gripper/: 061_foam_brick.sdf  2d_prismatic_finger.sdf  2d_prismatic_gripper_simulation.py  2d_revolute_finger.sdf  2d_revolute_gripper_simulation.py  BUILD.bazel  planar_gripper.sdf  planar_gripper.xacro
examples/allegro_hand/: allegro_common.cc  allegro_lcm.h  run_allegro_constant_load_demo.cc
examples/allegro_hand/teleop_manus/: BUILD.bazel  block.sdf  run_teleop.cc  run_test.cc
examples/allegro_hand/teleop_manus_IDC/: BUILD.bazel  block.sdf  corelle_livingware_11oz_mug_red.mtl  corelle_livingware_11oz_mug_red.sdf  run_teleop.cc
examples/contact_model/: BUILD.bazel  rigid_mug_gripper.cc  run_mug_sim.sh
examples/manipulation_station/: end_effector_teleop.py  manipulation_station.cc  manipulation_station.h  mock_station_simulation.cc
examples/multibody/rolling_sphere/: BUILD.bazel  ikea_dinera_plate_8in.mtl  ikea_dinera_plate_8in_4000.obj.mtl  ikea_dinera_plate_8in_col.mtl  ikea_dinera_plate_8in_no_collisions.sdf  make_rolling_sphere_plant.cc  make_rolling_sphere_plant.h  rolling_sphere_run_dynamics.cc
examples/pendulum/: BUILD.bazel  discrete_time_approximation.h  passive_simulation.cc  pendulum_plant.cc  pendulum_plant.h  trajectory_optimization_common.h  trajectory_optimization_simulation.cc  trajectory_optimization_simulation_mbp.cc
examples/planar_gripper/: 1dof_brick.sdf  1dof_brick_updated.sdf  BUILD.bazel  README.md  brick.sdf  brick_dynamic_constraint.cc  brick_dynamic_constraint.h  brick_qp.cc  brick_qp.h  brick_qp_multiple_contact_simulation.cc  brick_static_equilibrium_constraint.cc  brick_static_equilibrium_constraint.h  contact_force_qp.cc  contact_force_qp.h  finger_1dof_brick_force_regulation.cc  finger_brick.cc  finger_brick.h  finger_brick_control.cc  finger_brick_control.h  finger_brick_postures2.txt  finger_brick_postures3.txt  finger_force_regulation.cc  finger_ground_force_regulation.cc  fixed_brick.sdf  fixed_surface.sdf  gripper_brick.cc  gripper_brick.h  gripper_brick_helper.cc  gripper_brick_helper.h  gripper_brick_planning_constraint_helper.cc  gripper_brick_planning_constraint_helper.h  gripper_brick_trajectory_optimization.cc  gripper_brick_trajectory_optimization.h  keyframes_1.txt  keyframes_2.txt  pinned_brick_postures_01.txt  pinned_brick_postures_02.txt  pinned_brick_postures_03.txt  planar_brick.sdf  planar_finger.sdf  (+38 more)
examples/planar_gripper/keyframes/: README.md  pinned_brick_postures_04.txt  pinned_brick_single_mode.txt  planar_brick_postures_02.txt  planar_brick_test_01.txt  planar_brick_test_01a.txt
examples/planar_gripper/keysdir/: finger_postures.txt  key_frames.txt  keyframes_bak.txt
examples/planar_gripper/models/: 1dof_brick.sdf  1dof_brick_delrin.sdf  fixed_brick.sdf  planar_brick.sdf  planar_finger.sdf  planar_gripper.sdf  planar_gripper.xacro
examples/planar_gripper/models/meshes/: README.md  simple_brick_backup.mtl
examples/planar_gripper/test/: brick_dynamic_constraint_test.cc  brick_only_qp_simulation.cc  brick_only_qp_test.cc  brick_qp_multiple_contact_simulation.cc  brick_qp_simulation.cc  brick_static_equilibrium_constraint_test.cc  contact_force_qp_test.cc  finger_1dof_brick_force_regulation.cc  finger_ground_force_regulation.cc  force_control_stabilization.cc  force_control_test.cc  gripper_brick_helper_test.cc  gripper_brick_trajectory_optimization_test.cc  hybrid_control_simulation.cc  planar_finger.sdf  planar_finger.xacro  planar_finger_qp_test.cc  planar_gripper_common_test.cc  planar_gripper_lcm_test.cc  planar_gripper_test.cc  planar_gripper_udp_test.cc  planar_gripper_utils_test.cc  qp_test.cc  reorient_box_demo.cc
geometry/: geometry_visualization.cc
geometry/proximity/: hydroelastic_callback.h
lcmtypes/: BUILD.bazel  lcmt_contact_info_for_viz.lcm  lcmt_planar_gripper_finger_command.lcm  lcmt_planar_gripper_finger_face_assignment.lcm  lcmt_planar_gripper_finger_face_assignments.lcm  lcmt_planar_gripper_qp_status.lcm  lcmt_planar_manipuland_desired.lcm  lcmt_planar_manipuland_qp_plan.lcm  lcmt_planar_manipuland_spatial_force.lcm  lcmt_planar_manipuland_spatial_forces.lcm  lcmt_planar_plant_state.lcm  lcmt_point_pair_contact_info_for_viz.lcm  lcmt_spatial_force_for_viz.lcm  lcmt_spatial_forces_for_viz.lcm
manipulation/planner/: robot_plan_interpolator.cc  robot_plan_interpolator.h
manipulation/schunk_wsg/: schunk_wsg_lcm.cc
manipulation/util/: .geometry_inspector.py.swp  simple_tree_visualizer_demo.cc
multibody/dev/: BUILD.bazel
multibody/hydroelastics/: hydroelastic_engine.cc
multibody/inverse_kinematics/: inverse_kinematics.h
multibody/optimization/: BUILD.bazel  contact_implicit_constraint.cc  contact_implicit_constraint.h  semi_implicit_euler_constraint.cc  semi_implicit_euler_constraint.h  static_equilibrium_constraint.cc  static_equilibrium_constraint.h
multibody/parsers/: sdf_parser.cc
multibody/plant/: BUILD.bazel  contact_results_to_lcm.cc  force_controller.cc  force_controller.h  multibody_plant.cc  multibody_plant.h  spatial_force_output.cc  spatial_force_output.h  spatial_forces_to_lcm.cc  spatial_forces_to_lcm.h
multibody/rigid_body_plant/: rigid_body_plant.cc  rigid_body_plant.h
solvers/: moby_lcp_solver.cc
systems/analysis/: simulator.h
systems/controllers/: admittance_controller.h  pid_controlled_system.cc
systems/lcm/: lcm_log_playback_system.cc  (+1 more)
(+133 files in other folders)
