# -*- python -*-

load("@drake//tools/install:install.bzl", "install")
load("//tools/lint:lint.bzl", "add_lint_tests")
load(
    "@drake//tools/skylark:drake_py.bzl",
    "drake_py_binary",
    "drake_py_library",
)
load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/install:install_data.bzl", "install_data")
load(
    "@drake//tools/vector_gen:vector_gen.bzl",
    "drake_cc_vector_gen_library",
)

drake_py_binary(
    name = "planar_gripper_simulation_py",
    srcs = ["planar_gripper_simulation.py"],
    add_test_rule = 1,
    data = [
        "//examples/planar_gripper:brick.sdf",
        "//examples/planar_gripper:planar_gripper.sdf",
    ],
    test_rule_args = [
        "--target_realtime_rate=0",
        "--simulation_time=0.1",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//bindings/pydrake",
    ],
)

drake_cc_library(
    name = "planar_gripper_common",
    hdrs = ["planar_gripper_common.h"],
    deps = [
        "//common:find_resource",
        "//multibody/plant",
        "//systems/lcm:lcm_interface_system",
    ],
)

drake_cc_binary(
    name = "planar_gripper_simulation",
    srcs = ["planar_gripper_simulation.cc"],
    add_test_rule = 1,
    data = [
        "//examples/planar_gripper:brick.sdf",
        "//examples/planar_gripper:planar_gripper.sdf",
        "//examples/planar_gripper:postures.txt",
    ],
    test_rule_args = [
        "--simulation_time=0.1",
        "--target_realtime_rate=0",
    ],
    deps = [
        ":planar_gripper_common",
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//geometry:geometry_visualization",
        "//manipulation/planner:robot_plan_interpolator",
        "//multibody/parsing",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/controllers:inverse_dynamics_controller",
        "//systems/framework:diagram",
        "//systems/lcm:lcm_interface_system",
        "//systems/primitives:constant_value_source",
        "//systems/primitives:constant_vector_source",
        "@gflags",
        "@lcmtypes_robotlocomotion",
    ],
)

drake_py_binary(
    name = "planar_finger_simulation",
    srcs = ["planar_finger_simulation.py"],
    add_test_rule = 1,
    data = [
        "//examples/planar_gripper:1dof_brick.sdf",
        "//examples/planar_gripper:planar_finger.sdf",
    ],
    test_rule_args = [
        "--target_realtime_rate=0",
        "--simulation_time=0.1",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//bindings/pydrake",
    ],
)
