# -*- python -*-

load("@drake//tools/install:install.bzl", "install")
load("//tools/lint:lint.bzl", "add_lint_tests")
load(
    "@drake//tools/skylark:drake_py.bzl",
    "drake_py_binary",
    "drake_py_library",
)
load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/install:install_data.bzl", "install_data")
load(
    "@drake//tools/vector_gen:vector_gen.bzl",
    "drake_cc_vector_gen_library",
)

drake_cc_library(
    name = "planar_gripper_common",
    srcs = ["planar_gripper_common.cc"],
    hdrs = ["planar_gripper_common.h"],
    deps = [
        "//common:find_resource",
        "//multibody/plant",
        "//systems/lcm:lcm_interface_system",
        "@lcmtypes_robotlocomotion",
    ],
)

drake_cc_library(
    name = "gripper_brick",
    srcs = ["gripper_brick.cc"],
    hdrs = ["gripper_brick.h"],
    data = [
        "//examples/planar_gripper:planar_brick.sdf",
        "//examples/planar_gripper:planar_gripper.sdf",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//common:find_resource",
        "//examples/planar_gripper:planar_gripper_common",
        "//geometry:geometry_visualization",
        "//multibody/parsing",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
    ],
)

drake_cc_binary(
    name = "planar_gripper_simulation",
    srcs = ["planar_gripper_simulation.cc"],
    add_test_rule = 1,
    data = [
        "//examples/planar_gripper:planar_brick.sdf",
        "//examples/planar_gripper:planar_gripper.sdf",
        "//examples/planar_gripper:postures.txt",
    ],
    test_rule_args = [
        "--simulation_time=0.1",
        "--target_realtime_rate=0",
    ],
    deps = [
        ":planar_gripper_common",
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//common/trajectories:piecewise_polynomial",
        "//geometry:geometry_visualization",
        "//multibody/parsing",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/controllers:inverse_dynamics_controller",
        "//systems/framework:diagram",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:trajectory_source",
        "@gflags",
        "@lcmtypes_robotlocomotion",
    ],
)

drake_cc_binary(
    name = "planar_finger_simulation",
    srcs = ["planar_finger_simulation.cc"],
    add_test_rule = 1,
    data = [
        "//examples/planar_gripper:1dof_brick.sdf",
        "//examples/planar_gripper:fixed_surface.sdf",
        "//examples/planar_gripper:planar_finger.sdf",
    ],
    test_rule_args = [
        "--simulation_time=0.1",
        "--target_realtime_rate=0",
    ],
    deps = [
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//geometry:geometry_visualization",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//systems/analysis:simulator",
        "//systems/controllers:inverse_dynamics_controller",
        "//systems/framework:diagram",
        "//systems/primitives:adder",
        "//systems/primitives:constant_value_source",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:multiplexer",
        "//systems/primitives:sine",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "finger_force_regulation",
    srcs = ["finger_force_regulation.cc"],
    add_test_rule = 1,
    data = [
        "//examples/planar_gripper:fixed_surface.sdf",
        "//examples/planar_gripper:planar_finger.sdf",
    ],
    test_rule_args = [
        "--simulation_time=0.1",
        "--target_realtime_rate=0",
    ],
    deps = [
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//geometry:geometry_visualization",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:zero_order_hold",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "test",
    srcs = ["test.cc"],
    add_test_rule = 1,
    data = [
        "//manipulation/models/iiwa_description:models",
    ],
    test_rule_args = [
        "--simulation_time=0.1",
        "--target_realtime_rate=0",
    ],
    deps = [
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//geometry:geometry_visualization",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:force_controller",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/lcm:lcm_pubsub_system",
        "//systems/primitives:constant_vector_source",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "test2",
    srcs = ["test2.cc"],
    add_test_rule = 1,
    data = [
        "//manipulation/models/iiwa_description:models",
    ],
    test_rule_args = [
        "--simulation_time=0.1",
        "--target_realtime_rate=0",
    ],
    deps = [
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//geometry:geometry_visualization",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//multibody/plant:force_controller",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:zero_order_hold",
        "@gflags",
    ],
)

drake_cc_googletest(
    name = "gripper_brick_test",
    deps = [
        ":gripper_brick",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)

add_lint_tests()
