load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = [":__subpackages__"],
)

drake_cc_binary(
    name = "run_teleop",
    srcs = ["run_teleop.cc"],
    data = [
        "//examples/allegro_hand/teleop_manus_IDC:block.sdf",
        "//examples/allegro_hand/teleop_manus_IDC:corelle_livingware_11oz_mug_red.obj",
        "//examples/allegro_hand/teleop_manus_IDC:corelle_livingware_11oz_mug_red.sdf",
        "//manipulation/models/allegro_hand_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//common:type_safe_index",
        "//examples/allegro_hand:allegro_common",
        "//examples/allegro_hand:allegro_lcm",
        "//geometry:geometry_visualization",
        "//lcm",
        "//lcmtypes:allegro",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//systems/analysis",
        "//systems/analysis:runge_kutta2_integrator",
        "//systems/controllers",
        "//systems/lcm:connect_lcm_scope",
        "//systems/lcm:lcm_pubsub_system",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:multiplexer",
        "//systems/primitives:signal_logger",
        "//systems/rendering:pose_bundle_to_draw_message",
        "@gflags",
    ],
)

add_lint_tests()
