# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

package(default_visibility = ["//visibility:public"])

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_library(
    name = "make_rolling_sphere_plant",
    srcs = [
        "make_rolling_sphere_plant.cc",
    ],
    hdrs = [
        "make_rolling_sphere_plant.h",
    ],
    data = [":plate_files"],
    deps = [
        "//common:default_scalars",
        "//geometry:geometry_ids",
        "//geometry:scene_graph",
        "//math:geometric_transform",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)

drake_cc_binary(
    name = "rolling_sphere_run_dynamics",
    srcs = ["rolling_sphere_run_dynamics.cc"],
    add_test_rule = 1,
    test_rule_args = [
        "--simulation_time=0.1",
        "--simulator_target_realtime_rate=0.0",
    ],
    deps = [
        ":make_rolling_sphere_plant",
        "//common:add_text_logging_gflags",
        "//geometry:drake_visualizer",
        "//multibody/plant:contact_results_to_lcm",
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_gflags",
        "//systems/analysis:simulator_print_stats",
        "//systems/framework:diagram",
        "@gflags",
    ],
)

filegroup(
    name = "plate_files",
    srcs = [
        "ikea_dinera_plate_8in.mtl",
        "ikea_dinera_plate_8in.obj",
        "ikea_dinera_plate_8in_2000.obj",
        "ikea_dinera_plate_8in_2000.obj.mtl",
        "ikea_dinera_plate_8in_4000.obj",
        "ikea_dinera_plate_8in_4000.obj.mtl",
        "ikea_dinera_plate_8in_500.obj",
        "ikea_dinera_plate_8in_500.obj.mtl",
        "ikea_dinera_plate_8in_Diffuse.png",
        "ikea_dinera_plate_8in_Normal.png",
        "ikea_dinera_plate_8in_Roughness.png",
        "ikea_dinera_plate_8in_Specular.png",
        "ikea_dinera_plate_8in_col.mtl",
        "ikea_dinera_plate_8in_col.obj",
        "ikea_dinera_plate_8in_color.png",
        "ikea_dinera_plate_8in_no_collisions.sdf",
    ],
)

add_lint_tests()
