# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load("//tools/lint:lint.bzl", "add_lint_tests")
load(
    "//tools:drake.bzl",
    "drake_cc_binary",
    "drake_cc_library",
    "drake_cc_googletest",
)

filegroup(
    name = "mydata",
    srcs = glob([
        "**/*.urdf",
        "**/*.sdf",
        "**/*.txt",
    ]),
    visibility = ["//visibility:public"],
)

drake_cc_library(
    name = "dual_arms_rotate_box_planner",
    srcs = ["dual_arms_rotate_box_planner.cc"],
    hdrs = ["dual_arms_rotate_box_planner.h"],
    deps = [
        "//drake/lcm",
        "//drake/multibody:rigid_body_tree",
        "//drake/multibody/parsers",
        "//drake/multibody/rigid_body_plant:drake_visualizer",
        "//drake/solvers:mathematical_program",
    ],
)

drake_cc_binary(
    name = "dual_arms_rotate_box_demo",
    srcs = ["dual_arms_rotate_box_demo.cc"],
    deps = [
        "dual_arms_rotate_box_planner",
    ],
)

drake_cc_googletest(
    name = "dual_arms_rotate_box_planner_test",
    deps = [
        ":dual_arms_rotate_box_planner",
    ],
)

drake_cc_library(
    name = "dual_arms_box_util",
    srcs = [
        "dual_arms_box_util.cc",
    ],
    hdrs = [
        "dual_arms_box_util.h",
    ],
    deps = [
        "//drake/common:find_resource",
        "//drake/lcm",
        "//drake/multibody:rigid_body_tree",
        "//drake/multibody/parsers",
        "//drake/multibody/rigid_body_plant:drake_visualizer",
    ],
)

drake_cc_binary(
    name = "dual_arms_box_ik_planner",
    srcs = ["dual_arms_box_ik_planner.cc"],
    data = [
        ":mydata",
        "//drake/examples/kuka_iiwa_arm:models",
        "//drake/manipulation/models/iiwa_description:models",
    ],
    deps = [
        "dual_arms_box_util",
        "//drake/manipulation/util:simple_tree_visualizer",
        "//drake/multibody:inverse_kinematics",
    ],
)
